Fix dark mode narrow search text

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -57,3 +57,11 @@ body {
 #dark .album {
   background-color: black !important;
 }
+
+.checkbox-text {
+  font-size: 12px;
+}
+
+#dark .checkbox-text {
+  color: white;
+}
